Updated Extension Code

--- a/popup.html
+++ b/popup.html
@@ -144,6 +144,13 @@
         <button id="testButton" class="btn btn-secondary" disabled>Test Voice Recognition</button>
     </div>
 
+    <!-- Chatbot UI -->
+    <div id="chatContainer" style="margin-top:20px; max-height:220px; overflow-y:auto; background:#f7fafc; border-radius:8px; padding:10px; font-size:14px; border:1px solid #e2e8f0;"></div>
+    <div id="chatInputArea" style="display:flex; margin-top:10px; gap:5px;">
+        <input id="chatInput" type="text" placeholder="Type your question..." style="flex:1; padding:8px; border-radius:6px; border:1px solid #cbd5e0; font-size:14px;" />
+        <button id="sendChatBtn" class="btn btn-primary" style="padding:8px 12px;">Send</button>
+    </div>
+
     <div class="shortcut-info">
         <div>Keyboard Shortcuts:</div>
         <div><span class="shortcut-key">Ctrl</span> + <span class="shortcut-key">Shift</span> + <span class="shortcut-key">Y</span> - Toggle Voice</div>
